<resources>
    <string name="app_name">ApnaAdda</string>
    <string name="app_icon_text">App Icon</string>
    <string name="app_quote_text">SociaLize with COMPASSION, KINDNESS and GRACE.</string>
    <string name="next_button_text">NEXT</string>
    <string name="next_button_icon_des">next button icon</string>
    <string name="login_text">Login</string>
    <string name="signup_text">First time here? Create Account</string>
    <string name="create_account_text">Create Account</string>
    <string name="name_text">Name</string>
    <string name="enter_number_text">Enter your phone number</string>
    <string name="sms_alert_text">ApnaAdda will send an SMS message to verify your phone number.</string>
    <string name="enter_code_text">Please enter the code sent on your phone number.</string>
    <string name="enter_code_title">Enter Code</string>
    <string name="invalid_code_text">Invalid Code</string>
    <string name="mail_button_content_description">mail login option button</string>
    <string name="phone_login_button_content_description">phone login option button</string>
    <string name="plus_symbol">+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_friends_empty_list_detail">Seems you are not a socialized person. Want to make friends then press the Add Friend button below.</string>
    <string name="text_requests_empty_list_detail">You don\'t have any requests right now! Please comeback after a short duration to see if anyone wants to connect with you.</string>
    <string name="divider_text">divider</string>
</resources>