<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen"
    tools:ignore="UseCompoundDrawables">

    <LinearLayout
        android:id="@+id/linear_layout_splash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/aclonica"
            android:layout_marginBottom="40dp"
            android:textStyle="bold"
            android:textSize="50sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/app_name"/>


        <TextView
            android:id="@+id/app_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_shape"
            android:fontFamily="@font/aclonica"
            android:lineSpacingExtra="10dp"
            android:padding="20dp"
            android:text="@string/app_quote_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_options_linear_layout"
        android:text="Login"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="#A8FFFFFF" />

    <LinearLayout
        android:id="@+id/login_options_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/mail_login_option_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mail"
            android:background="@drawable/round_shape"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/mail_button_content_description"
            android:padding="10dp"/>

        <ImageButton
            android:id="@+id/phone_login_option_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone"
            android:background="@drawable/round_shape"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/phone_login_button_content_description"
            android:padding="10dp"/>

    </LinearLayout>

</RelativeLayout>